Add netstandard and snupkg to spell check

--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -5,11 +5,13 @@
     "devcontainers",
     "Hashtable",
     "Intrinsics",
+    "netstandard",
     "Nieto",
     "Omni",
     "resx",
     "runspace",
     "runspaces",
+    "snupkg",
     "SYSLIB",
     "unregistering",
     "unregistration"
